# unimrcp-plugins-iflytek

./: CMakeLists.txt  Makefile.in  README.md
src/: iflytek_recog_engine.c
